--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <br> На этом сайте представлены только самые популярные жанры электронной музыки без использования суб-жанров, иначе бы список получился слишком большим.
   </article>
   <figure>
-    <img src="../music/goose.gif" alt="картинка-невидимка">
+    <img src="../music/images/goose.gif" alt="картинка-невидимка">
     </figure>
 </div>
 </div>
@@ -46,7 +46,7 @@
 
 <OL> <H2>
   <div class="muz">
-  <div class="amb"><a href="#p1">Ambient <img src="..//music/amb.jpg"></a></div>
+  <div class="amb"><a href="#p1">Ambient</a></div>
   <div class="bah"><a href="#p2">Bass House</a></div>
   <div class="brh"><a href="#p3">Big Room House</a></div>
   <div class="brb"><a href="#p4">Breakbeat</a></div>
